fix: wrap inline code examples
Fixes #302 doesn't look ideal, but better that cut off examples

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -47,7 +47,6 @@
             color: var(--color-text);
             font-weight: 600;
             padding: .2rem .5rem;
-            white-space: pre;
         }
 
         pre > code {
